fix recomb